- Лекция 10 классная работа

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -2007,4 +2007,44 @@
     //     }
     // }
 
+    // Лекция №10 по JavaScript. Классная работа
+
+    // Задачи
+
+    // Дан массив. Выведите его элементы в виде списка ul.
+    //
+    //     Дан массив с юзерами:
+    //
+    //     var products = [
+    //         {name: 'Коля', age: 30},
+    //         {name: 'Вася', age: 40},
+    //         {name: 'Петя', age: 50},
+    //     ];
+    // Выведите его элементы в виде списка ul. В каждой li будет имя и возраст юзера.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы в конце каждой li появилась ссылка 'редактировать'.
+    //     По нажатию на эту ссылку под ul должны появится кнопка и два инпута, в которых будет имя и возраст
+    //     пользователя. По нажатию на кнопку данные должны поредактироваться, а инпуты и кнопка спрятаться.
+    //
+    //     Задачи
+    // Дан чекбокс и абзац. Сделайте так, что если чекбокс отмечен - абзац есть на экране,
+    // а если не отмечен - то абзаца нет.
+    //
+    //     Дан массив, заполненный значениями true и false. Выведите на экран столько чекбоксов,
+    //     сколько элементов в массиве. Причем, если значение элемента равно true - пусть чекбокс будет отмечен,
+    //     а если false - не отмечен.
+    //
+    //     Задачи
+
+    // Дан массив с юзерами:
+    //
+    //     var products = [
+    //         {name: 'Коля', active: true},
+    //         {name: 'Вася', active: true},
+    //         {name: 'Петя', active: false},
+    //     ];
+    // Выведите его элементы в виде списка ul. Если юзер активный (поле active равно true),
+    // выведите его зеленым цветом, а если не активный - красным.
+
+
 </script>
