--- a/lectures/index.html
+++ b/lectures/index.html
@@ -38,23 +38,9 @@
     </style>
 </head>
 <body>
-<div id="parent">
-    <div>
-        <div class="tabs" id="0">1</div>
-        <div class="tabs" id="1">2</div>
-        <div class="tabs" id="2">3</div>
-        <div class="tabs" id="3">4</div>
-    </div>
-    <div>
-        <div class="content passive" id="0">1</div>
-        <div class="content passive" id="1">2</div>
-        <div class="content passive" id="2">3</div>
-        <div class="content passive" id="3">4</div>
-    </div>
-</div>
+<div id="parent"></div>
 
 <ul id="ul"></ul>
-<input id="input">
 
 
 </body>
@@ -2085,10 +2071,155 @@
     //     ];
     // Выведите его элементы в виде списка ul. В каждой li будет имя и возраст юзера.
     //
+    // var ul = document.getElementById('ul');
+    // var workers = [
+    //     {name: 'Коля', age: 30},
+    //     {name: 'Вася', age: 40},
+    //     {name: 'Петя', age: 50},
+    // ];
+    //
+    // createList(ul, workers);
+    //
+    // function createList(parent, content) {
+    //     for (var i = 0; i < content.length; i++) {
+    //         var li = document.createElement("li");
+    //         li.innerHTML = content[i].name + ' ' + content[i].age;
+    //         parent.appendChild(li);
+    //     }
+    // }
+
+
     //     Модифицируйте предыдущую задачу так, чтобы в конце каждой li появилась ссылка 'редактировать'.
     //     По нажатию на эту ссылку под ul должны появится кнопка и два инпута, в которых будет имя и возраст
     //     пользователя. По нажатию на кнопку данные должны поредактироваться, а инпуты и кнопка спрятаться.
     //
+    var ul = document.getElementById('ul');
+    var workers = [
+        {name: 'Коля', age: 30},
+        {name: 'Вася', age: 40},
+        {name: 'Петя', age: 50},
+    ];
+
+
+    initList(ul, workers);
+
+
+    function initList(ul, arr) {
+        var elements = createList(ul, arr);
+        for (var i = 0; i < elements.length; i++) {
+            editElement(elements[i]);
+        }
+    }
+
+    function createList(parent, content) {
+        var elements = [];
+        for (var i = 0; i < content.length; i++) {
+
+            var li = addElement(parent, content[i]);
+
+            elements.push(li);
+
+        }
+        return elements;
+
+    }
+
+    function addElement(ul, content) {
+        var li = document.createElement("li");
+        li.innerHTML = content.name + ' ' + content.age;
+
+        ul.appendChild(li);
+
+        return li;
+
+    }
+
+    function editElement(elem) {
+
+        elem.addEventListener("click", function edit() {
+            var content = this.innerHTML.split(' ');
+            this.innerHTML = '';
+            var nameInput = document.createElement("input");
+            var ageInput = document.createElement("input");
+            var acceptButton = document.createElement("button");
+            acceptButton.innerHTML = 'accept!'
+            nameInput.value = content[0];
+            ageInput.value = content[1];
+
+            this.appendChild(nameInput);
+            this.appendChild(ageInput);
+            this.appendChild(acceptButton);
+
+            var self = this;
+
+
+            acceptButton.addEventListener("click", function hideEdit() {
+                self.innerHTML = nameInput.value + ' ' + ageInput.value;
+                this.removeEventListener("click", hideEdit);
+                // self.addEventListener("click", edit);
+
+
+            })
+            this.removeEventListener("click", edit);
+        });
+    }
+
+    //  function createList(elem, arr) {
+    //     var items = [];
+    //     for (var i = 0; i < arr.length; i++) {
+    //         var li = addItem(elem, '<span>' + arr[i] + '</span>' + ' <a href="#">clear</a>');
+    //         items.push(li);
+    //     }
+    //
+    //     return items;
+    // }
+    // var arr = ['a', 'b', 'c'];
+    // var ul  = document.getElementById('ul');
+    // var input = document.getElementById('input');
+    //
+    // initList(ul, arr);
+    //
+    // function initList(ul, arr) {
+    //     var items = createList(ul, arr);
+    //     for (var i = 0; i < items.length; i++){
+    //         editElem(items[i].firstElementChild, items[i].lastElementChild);
+    //     }
+    // }
+    //
+    //
+    // function addItem(ul, text) {
+    //     var li = document.createElement("li");
+    //     li.innerHTML = text;
+    //     ul.appendChild(li);
+    //
+    //     return li;
+    // }
+    //
+    // function editElem(elem, elem2) {
+    //     elem.addEventListener("click", function edit() {
+    //         var text = this.innerHTML;
+    //         this.innerHTML = '';
+    //
+    //         var input = document.createElement("input");
+    //         input.value = text;
+    //         this.appendChild(input);
+    //
+    //         var self = this;
+    //         input.addEventListener("blur", function () {
+    //             self.innerHTML = this.value;
+    //
+    //             self.addEventListener("click", edit);
+    //
+    //         });
+    //         this.removeEventListener("click", edit);
+    //     });
+    //     elem2.addEventListener("click", function () {
+    //         this.parentElement.remove();
+    //     })
+    // }
+    //
+
+
     //     Задачи
     // Дан чекбокс и абзац. Сделайте так, что если чекбокс отмечен - абзац есть на экране,
     // а если не отмечен - то абзаца нет.
