- Лекция 11 классная работа

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -2356,6 +2356,45 @@
     //         return true;
     //     }
     // }
-
+    // Лекция №11 по JavaScript. Классная работа
+    // Задачи
+    // Даны 5 инпутов и кнопка. В каждый инпут пользователь должен вбить правильное число.
+    // В каждом инпуте число, которое пользователь должен вбить в него, записано в атрибуте data-number.
+    // Сделайте так, чтобы по нажатию на кнопку инпуты проверили правильность ввода и, если число было введено
+    // правильно, покрасили свою границу в зеленый цвет, а если не правильно - в красный.
+    //
+    //     Пусть теперь дан массив чисел. Модифицируйте предыдущую задачу так, чтобы инпуты формировались в цикле,
+    //     а содержимое их атрибута data-number бралось из массива.
+    //
+    //     Задачи
+    // Даны 5 инпутов и кнопка. Над каждым инпутом написан вопрос, ответ на который должен дать пользователь.
+    // Правильный ответ хранится в каждом инпуте в атрибуте data-right-answer.
+    // Сделайте так, чтобы по нажатию на кнопку, все инпуты проверили правильность введенных ответов и каждый
+    // неправильный ответ выделили красным цветом и рядом написали правильный.
+    //
+    //     Задачи
+    // Даны 5 инпутов и кнопка. Пользователь вбивает данные в инпуты и нажимает на кнопку. По нажатию на кнопку
+    // сформируйте массив данных, вбитых пользователем.
+    //
+    //     Дан инпут и кнопка. Пользователь вбивает данные в инпут и нажимает на кнопку. После каждого нажатия инпут
+    //     очищается, а его содержимое добавляется в массив. Таким образом мы получаем массив данных,
+    //     которые пользователь вбивал по очереди в наш инпут.
+    //
+    //     Модифицируйте предыдущую задачу. Пусть пользователь вбивает в инпут числа. Сформируйте массив этих чисел.
+    //     Сделайте еще одну кнопку, по нажатию на которую на экран выведется сумма введенных чисел.
+    //
+    //     Задачи
+    // Дан массив со строками. Покажите пользователю первый элемент массива, а под ним сделайте ссылку,
+    // по нажатию на которую будет показываться следующий элемент массива. Как только все элементы закончатся -
+    // покажите сообщение об этом, а также заблокируйте кнопку.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы, когда все элементы будут показаны, показ начинался опять
+    //     с первого элемента.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы стало две кнопки: вперед и назад.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы кнопка назад была неактивной,
+    //     если сейчас показывается первый элемент, а кнопка вперед была неактивной, если сейчас показывается последний
+    //     элемент.
 
 </script>
